Fix collapsed right side layout panel

--- a/static/_/styles/layout.css
+++ b/static/_/styles/layout.css
@@ -51,7 +51,9 @@
   order: -1;
   overflow: hidden;
 }
-.layout-rside {}
+.layout-rside {
+	overflow: hidden;
+}
 
 /*
 @media (--break-lg) {
